# zkp-project

./: .gitignore  AGE_VERIFICATION_COMPLETION_REPORT.md  BALANCE_PROOF_COMPLETION_REPORT.md  BALANCE_PROOF_WASM_REPORT.md  BITWISE_CHIP_FIX_REPORT.md  CIRCUIT_STANDARDS_ROLLOUT.md  COMMANDS.md  COMMANDS_CN.md  COMPARATOR_CHIP_FIX_REPORT.md  DUAL_ENGINE_EXECUTION_STEPS.md  DUAL_ENGINE_FINAL_REPORT.md  ENGINE_INTERFACE_ALIGNMENT_PROGRESS.md  FILES.txt  IMPLEMENTATION_CHECKLIST.md  INTERFACE_ALIGNMENT_COMPLETION_REPORT.md  INTERFACE_ALIGNMENT_PROGRESS.md  INTERFACE_ALIGNMENT_STATUS_UPDATE.md  LICENSE  PROBLEM_DIAGNOSIS_STANDARDS.md  PRODUCTION_ZKP_FINAL_REPORT.md  PRODUCTION_ZKP_VALIDATION_REPORT.md  PROJECT_SUMMARY.md  PROJECT_SUMMARY_CN.md  QUICKSTART.md  QUICKSTART_CN.md  QUICK_TEST_GUIDE.md  RANGE_CHECK_FIX_REPORT.md  README.md  README_CN.md  RUST_PROVER_IMPLEMENTATION_REPORT.md  STRUCTURE.md  STRUCTURE_CN.md  TESTING_STANDARDS.md  THREE_MODULE_ALIGNMENT_REPORT.md  VALIDATION_ANALYSIS.md  VALIDATION_ANALYSIS_CN.md  WASM_BUILD_TARGET_FIX_REPORT.md  ZKP_CIRCUIT_DEVELOPMENT_STANDARDS.md  enhanced_validate.sh  enhanced_validation_report.json  (+13 more)
backend/: package.json
circom-circuits/: .circomlint.json  .gitignore  ACTUAL_VALIDATION_REPORT.md  ANNOUNCEMENT.md  IMPLEMENTATION_SUMMARY.md  INSTALL_CIRCOM.md  MIGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT_REPORT.md  PROJECT_STATUS.md  PROOF_OF_WORK.sh  QUICKSTART_PRODUCTION.md  README.md  README_CN.md  REFACTOR_SUMMARY.md  SELF_EVALUATION_REPORT.md  TEST_VERIFICATION_REPORT.md  (+3 more)
rust-prover/: .gitignore  AGE_VERIFICATION_V2_STATUS.md  CHANGELOG.md  CHANGELOG_CN.md  CIRCUIT_MAPPING.md  CIRCUIT_VALIDATION_REPORT.md  Cargo.toml  ES_MODULE_SUCCESS_REPORT.md  LICENSE  PRODUCTION_PROOF_MIGRATION.md  QUICK_START.md  README.md  README_CN.md  README_IMPLEMENTATION.md  STATUS.md  TEST_EXECUTION_REPORT.md  build_wasm.sh
rust-prover/docs/: BUILD_VERIFICATION_REPORT.md  CIRCUIT_SPECIFICATION.md  ES_MODULE_STANDARD.md  REVIEW_CHECKLIST.md  WASM_BUILD_GUIDE.md
rust-prover/scripts/: generate_keys.rs
rust-prover/src/: circuit.rs  lib.rs  main.rs  prover.rs  simple_adapter.rs  verifier.rs  wasm_bindings.rs
rust-prover/src/adapters/: circuit_adapter.rs  mod.rs
rust-prover/src/circuits/: age_verification.rs  age_verification_v2.rs  balance_proof.rs  merkle_proof.rs  mod.rs  range_proof.rs  square.rs  voting.rs
rust-prover/test/: README.md  README_CN.md  WASM_TEST_SUCCESS.md  test-results.txt  test-simple.js  test-wasm-cjs.js  test-wasm.js
rust-prover/tests/: mainnet_age_verification.rs  mainnet_balance_negative.rs  mainnet_balance_proof.rs  mainnet_balance_witness.rs  mainnet_square_proof.rs
(+102 files in other folders)
