[package]
name = "zkp-prover"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
halo2_proofs = "0.3"
halo2curves = { version = "0.6", features = ["bn256"] }
ff = "0.13"
group = "0.13"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# WASM 支持
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0

[[bin]]
name = "generate_keys"
path = "scripts/generate_keys.rs"
