[package]
name = "rust-prover"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "rust_prover"
path = "src/lib.rs"

[dependencies]
halo2_proofs = { version = "0.3.1", default-features = false, features = ["batch"] }
halo2curves = { version = "0.9.0", default-features = false, features = ["std", "derive_serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = "0.2"
anyhow = "1.0"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"
